Replace message enum/old config methods